apps/opengym/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: opengym
    component: web
spec:
  type: ClusterIP
  selector:
    app: opengym
    component: web
  ports:
    - name: http
      port: 80
      targetPort: http
